Signup form: fix direction of input fields in RTL mode (#28876)
* set forced LTR directions for all password/email/url inputs

* in the signup form, force LTR direction on username form

* force LTR direction on form-password-input component, and fix overlap on eye icon in RTL mode

--- a/assets/stylesheets/shared/_forms.scss
+++ b/assets/stylesheets/shared/_forms.scss
@@ -36,6 +36,13 @@ label {
 	box-sizing: border-box;
 }
 
+input[type="password"],
+input[type="email"],
+input[type="url"] {
+	/*rtl:ignore*/
+	direction: ltr;
+}
+
 /*Checkbooms*/
 
 input[type=checkbox],
